k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: staging-svc
  namespace: homepage
  labels:
    app: staging
spec:
  type: ClusterIP
  selector:
    app: staging
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
